prepare graph