@@ -1,13 +1,40 @@
-# demonstrate use of spark-sql
-mini project to show how hive sql can easily be executed on spark
+# graph playground
 
-use `sbt console`to interactively run queries
+The graph looks like a couple of friends connected to each other:
+```
+---+---------+-----+
+| id|     name|fraud|
++---+---------+-----+
+|  a|    Alice|    1|
+|  b|      Bob|    0|
+....
+|  f|    Fanny|    0|
+|  g|    Gabby|    0|
+|  h|Fraudster|    1|
++---+---------+-----+
+```
 
-or `./sync.sh` to run assembly
+and two different types of edges
+```
++---+---+------------+
+|src|dst|relationship|
++---+---+------------+
+|  a|  b|        call|
+|  b|  c|         sms|
+....
+|  a|  h|        call|
+|  f|  h|        call|
++---+---+------------+
+```
+which looks like 
+![graph](graph.png "gephi visualization")
 
-or `sbt run` but make sure to set `$SBT_OPTS -Xmx8G -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -Xss2M`
-as spark will be launched inside sbt 
+## goal
+Calculate the fraud percentage score for each friend in the social network as the mean of all interactions.
+- differenciate by type of interaction
+- differenciate by ingoing / outgoing interaction
+- weight interactions furhter away i.e. of friends of friends with a smaller weight
 
-for development (in the sbt shell) `~reStart`
-
-also `sbt test` is useful ;)
+Task:
+- learn pregel
+- learn aggregate messages operator :)
